<resources>
    <string name="app_name">TV dan Film</string>
    <string name="content_description">todo</string>
    <string name="overview">Sinopsis</string>
    <string name="title_movie">Film</string>
    <string name="settings">Pengaturan</string>
    <string name="title_tv">Acara TV</string>
    <string name="favorite">Disukai</string>
    <string name="data_not_available">Data Tidak Ditemukan</string>
    <string name="search">Cari</string>
    <string name="language">Bahasa</string>
    <string name="language_value">Indonesia</string>
    <string name="release_reminder">Pengingat Rilis</string>
    <string name="release_reminder_desc">Pengingat menunjukkan film yang dirilis hari ini</string>
    <string name="daily_reminder">Pengingat Harian</string>
    <string name="daily_reminder_desc">Pengingat harian untuk di aplikasi</string>
</resources>
