<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_16"
    tools:context=".view.SettingsActivity">

    <LinearLayout
        android:id="@+id/linear_layout_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/size_4"/>

        <TextView
            android:id="@+id/text_view_locale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/language_value"
            android:layout_marginBottom="@dimen/size_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="@dimen/size_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_reminder"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/size_4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_reminder_desc"/>
        </LinearLayout>

        <Switch
            android:id="@+id/switch_release_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_reminder"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/size_4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_reminder_desc"/>
        </LinearLayout>

        <Switch
            android:id="@+id/switch_daily_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>